--- a/04 Android Layout/FrameLayout/app/src/main/res/layout/activity_main.xml
+++ b/04 Android Layout/FrameLayout/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-<TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="扣钉科技公司"
-    android:gravity="top"
-    android:textSize="30pt"
-    android:background="#aa0000"
-    android:singleLine="true"
-    android:padding="10dp"
-    android:layout_weight="2"
-    />
-<TextView
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="移动联盟"
-    android:gravity="right"
-    android:textSize="10pt"
-    android:background="#0000aa"
-    android:padding="17dp"
-    android:layout_weight="1"
-    />
-</LinearLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/da"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/zhong"/>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/xiao"/>
+</FrameLayout>
